fetch api logic added

--- a/index.html
+++ b/index.html
@@ -18,22 +18,15 @@
       <main>
         <section class="card character-card">
           <h4>Characters</h4>
-          <ul class="character-list">
-            <li>Luke Skywalker</li>
-            <li>Luke Skywalker</li>
-            <li>Luke Skywalker</li>
-            <li>Luke Skywalker</li>
-            <li>Luke Skywalker</li>
-            <li>Luke Skywalker</li>
-          </ul>
+          <ul class="character-list"></ul>
           <div class="pag-nav">
-            <button class="btn left-btn"><</button>
+            <button class="btn left-btn">◁</button>
             <p>
               <span class="current-page">1</span>/<span class="total-pages"
                 >8</span
               >
             </p>
-            <button class="btn right-btn">></button>
+            <button class="btn right-btn">▷</button>
           </div>
         </section>
         <section class="card details-card">
