--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
       <main>
         <section class="card character-card">
           <h4>Characters</h4>
-          <ul class="character-list"></ul>
+          <div class="loader-grey-characters"></div>
+          <ul class="character-list">
+            
+          </ul>
           <div class="pag-nav">
             <button class="btn left-btn">◁</button>
             <p>
               <span class="current-page">1</span>/<span class="total-pages"
-                >8</span
+                >9</span
               >
             </p>
             <button class="btn right-btn">▷</button>
@@ -33,25 +36,27 @@
           <h4>Details</h4>
           <section class="character-details">
             <ul class="character-details__list">
-              <li class="details-name">Luke Skywalker</li>
-              <li>Height</li>
-              <li>Mass</li>
-              <li>Hair color</li>
-              <li>Skin color</li>
-              <li>Eye color</li>
-              <li>Birth year</li>
-              <li>Gender</li>
+              <div class="loader-grey"></div>
+              <li class="details-name character-name"></li>
+              <li class="height"></li>
+              <li class="mass"></li>
+              <li class="hair"></li>
+              <li class="skin"></li>
+              <li class="eyes"></li>
+              <li class="birth-year"></li>
+              <li class="gender"></li>
             </ul>
           </section>
           <section class="planet-details">
             <ul class="planet-details__list">
-              <li class="details-name">Tattooine</li>
-              <li>Rotation period</li>
-              <li>Orbital period</li>
-              <li>Diameter</li>
-              <li>Climate</li>
-              <li>Gravity</li>
-              <li>Terrain</li>
+              <div class="loader-white"></div>
+              <li class="details-name planet-name"></li>
+              <li class="rp"></li>
+              <li class="orb"></li>
+              <li class="diameter"></li>
+              <li class="climate"></li>
+              <li class="gravity"></li>
+              <li class="terrain"></li>
             </ul>
           </section>
         </section>
