--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
               <li class="gender"></li>
             </ul>
           </section>
+          <section class="tabs">
+          <div class="tab planet-tab">Planet</div>
+          <div class="tab species-tab">Species</div>
+          <div class="tab vehicles-tab">Vehicles</div>
+          <div class="tab starships-tab">Starships</div>
+          </section>
           <section class="planet-details">
+            <div class="loader-white"></div>
             <ul class="planet-details__list">
-              <div class="loader-white"></div>
-              <li class="details-name planet-name"></li>
-              <li class="rp"></li>
-              <li class="orb"></li>
-              <li class="diameter"></li>
-              <li class="climate"></li>
-              <li class="gravity"></li>
-              <li class="terrain"></li>
+                   
             </ul>
           </section>
         </section>
