Starting on RenderingDetails functions

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                    
             </ul>
           </section>
+          <section class="species-details">
+            <div class="loader-white"></div>
+            <ul class="species-details__list">
+                   
+            </ul>
+          </section>
         </section>
       </main>
     </div>
