Fixed styling for left-button on mac

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             
           </ul>
           <div class="pag-nav">
-            <button class="btn left-btn">◁</button>
+            <button class="btn left-btn">▷</button>
             <p>
               <span class="current-page">1</span>/<span class="total-pages"
                 >9</span
